fix: Fix contrast errors after accesibility check on index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ footer a :hover {
 
 .footer-description {
     font-size: small;
-    color: darkgray;
+    color: dimgray;
 }
 
 .footer-description p {
